--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ numpy
 pandas
 spacy
 sumy
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
+en_core_web_sm @spacy
