--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ numpy
 pandas
 spacy
 sumy
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0-py3-none-any.whl
