--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ spacy
 sumy
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0-py3-none-any.whl
 bs4
+tensorflow
 transformers
